--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-hacker
-name: meatbag.xyz
-title: null
+title: meatbag.xyz
+description: "@meatbagMB"
 plugins:
   - jekyll-relative-links
 relative_links:
