--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "@meatbagMB"
 github:
   is_project_page: false
 show_downloads: false
-footer: 'follow me on <a href="https://twitter.com/meatbagMB">twitter</a>'
+footer: 'follow me on <a href="https://twitter.com/meatbagMB" target="_blank">twitter</a>'
 header_pages:
   - index.md
   - about.md
