--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 remote_theme: b2a3e8/jekyll-theme-console
+url: "https://meatbag.xyz"
 markdown: kramdown
 title: meatbag.xyz
 description: "@meatbagMB"
